# arduide

./: .gitignore  CMakeLists.txt  Doxyfile  IDEApplication.cpp  IDEApplication.h  IDEGlobal.h  README  README.md  TODO  arduide-desktop.sh  arduide.kdev4  main.cpp
.kdev4/: arduide.kdev4
data/css/: style.css
data/js/: jquery.autoheight.js
data/libraries/IDEdbg/: IDEdbg.cpp  IDEdbg.h  IDEdbgConstants.h  IDEdbgPrivate.h  frame.cpp  frame.h  linked_list.cpp  linked_list.h  variable.cpp  variable.h
data/libraries/IDEdbg/examples/Basic_Debug/: Basic_Debug.pde
data/templates/: base.html  quickstart.html
env/: .Builder.cpp.kate-swp  Board.cpp  Board.h  Builder.cpp  Builder.h  Device.cpp  Device.h  ILogger.cpp  ILogger.h  ProjectHistory.cpp  ProjectHistory.h  Settings.cpp  Settings.h  Toolkit.cpp  Toolkit.h
gui/: AboutDialog.ui  BoardChooser.cpp  BoardChooser.h  Browser.cpp  Browser.cpp~  Browser.h  Browser.h~  ConfigBuild.ui  ConfigDialog.cpp  ConfigDialog.h  ConfigEditor.ui  ConfigPaths.ui  DeviceChooser.cpp  DeviceChooser.h  Editor.cpp  Editor.h  EditorFactory.cpp  EditorFactory.h  FirstTimeWizard.cpp  FirstTimeWizard.h  FirstTimeWizard.ui  LexerArduino.cpp  LexerArduino.h  MainWindow.cpp  MainWindow.cpp~  MainWindow.h  MainWindow.h~  MainWindow.ui  OutputView.cpp  OutputView.h  PageRenderer.cpp  PageRenderer.h
plugins/: CMakeLists.txt  IDEPluginInterface.cpp  IDEPluginInterface.h
plugins/debugger/: DebuggerPlugin.cpp  DebuggerPlugin.cpp~  DebuggerPlugin.h  DebuggerWidget.cpp  DebuggerWidget.cpp~  DebuggerWidget.h  DebuggerWidget.h~  DebuggerWidget.ui
plugins/debugger/TestEmbedded/: CMakeLists.txt  IDEdbg.h  TestEmbedded.kdev4  frame.h  linked_list.h  main.c  main.cpp  variable.h
plugins/debugger/TestEmbedded/.kdev4/: TestEmbedded.kdev4
plugins/serial/: SerialPlugin.cpp  SerialPlugin.h  SerialWidget.cpp  SerialWidget.h  SerialWidget.ui  SerialWriteDialog.cpp  SerialWriteDialog.h  SerialWriteDialog.ui
resources/: css.qrc  images.qrc  js.qrc  templates.qrc  update-qrc.py  windows.qrc
resources/css/: style.css
resources/templates/: base.html  quickstart.html
translations/: README  arduide_ca.ts  arduide_cs.ts  arduide_de.ts  arduide_es.ts  arduide_fr.ts  arduide_pt.ts  template_arduide_xx.ts
utils/: ColorButton.cpp  ColorButton.h  Compat.h  FileUtils.cpp  FileUtils.h  Serial.cpp  Serial.h  TemporaryDirectory.cpp  TemporaryDirectory.h
utils/QScintilla-gpl-2.4.2/: NEWS
utils/QScintilla-gpl-2.4.2/Python/: configure.py
utils/QScintilla-gpl-2.4.2/Python/sip/: qscilexerproperties.sip  qsciscintilla.sip  qsciscintillabase3.sip  qsciscintillabase4.sip
utils/QScintilla-gpl-2.4.2/Qt3/: PlatQt.cpp  SciClasses.cpp  SciClasses.h  ScintillaQt.cpp  qscilexerhtml.cpp  qscilexerproperties.cpp  qscilexerverilog.cpp  qscintilla.pro  qscintilla_cs.ts  qscintilla_de.qm  qscintilla_fr.ts  qscintilla_pt_br.ts  qscintilla_ru.ts  qsciscintilla.cpp  qsciscintillabase.cpp  qscistyle.cpp
utils/QScintilla-gpl-2.4.2/Qt3/Qsci/: qscicommandset.h  qscilexer.h  qscilexercpp.h  qscilexerhtml.h  qscilexerproperties.h  qsciscintilla.h  qsciscintillabase.h
utils/QScintilla-gpl-2.4.2/Qt4/: qscintilla_de.ts  qscintilla_es.ts
utils/QScintilla-gpl-2.4.2/doc/html-Qt3/: annotated.html  classQsciAPIs-members.html  classQsciAPIs.html  classQsciAbstractAPIs-members.html  classQsciAbstractAPIs.html  classQsciCommand-members.html  classQsciCommand.html  classQsciCommandSet-members.html  classQsciCommandSet.html  classQsciDocument-members.html  classQsciDocument.html  classQsciLexer-members.html  classQsciLexer.html  classQsciLexerBash-members.html  classQsciLexerBash.html  classQsciLexerBatch-members.html  classQsciLexerBatch.html  classQsciLexerCMake-members.html  classQsciLexerCMake.html  classQsciLexerCPP-members.html  classQsciLexerCPP.html  classQsciLexerCSS-members.html  classQsciLexerCSS.html  classQsciLexerCSharp-members.html  classQsciLexerCSharp.html  classQsciLexerCustom-members.html  classQsciLexerCustom.html  classQsciLexerD-members.html  classQsciLexerD.html  classQsciLexerDiff-members.html  classQsciLexerDiff.html  classQsciLexerFortran-members.html  classQsciLexerFortran.html  classQsciLexerFortran77-members.html  classQsciLexerFortran77.html  classQsciLexerHTML-members.html  classQsciLexerHTML.html  classQsciLexerIDL-members.html  classQsciLexerIDL.html  classQsciLexerJava-members.html  (+125 more)
utils/QScintilla-gpl-2.4.2/doc/html-Qt4/: annotated.html  classQsciAPIs-members.html  classQsciAPIs.html  classQsciAbstractAPIs-members.html  classQsciAbstractAPIs.html  classQsciCommand-members.html  classQsciCommand.html  classQsciCommandSet-members.html  classQsciCommandSet.html  classQsciDocument-members.html  classQsciDocument.html  classQsciLexer-members.html  classQsciLexer.html  classQsciLexerBash-members.html  classQsciLexerBash.html  classQsciLexerBatch-members.html  classQsciLexerBatch.html  classQsciLexerCMake-members.html  classQsciLexerCMake.html  classQsciLexerCPP-members.html  classQsciLexerCPP.html  classQsciLexerCSS-members.html  classQsciLexerCSS.html  classQsciLexerCSharp-members.html  classQsciLexerCSharp.html  classQsciLexerCustom-members.html  classQsciLexerCustom.html  classQsciLexerD-members.html  classQsciLexerD.html  classQsciLexerDiff-members.html  classQsciLexerDiff.html  classQsciLexerFortran-members.html  classQsciLexerFortran.html  classQsciLexerFortran77-members.html  classQsciLexerFortran77.html  classQsciLexerHTML-members.html  classQsciLexerHTML.html  classQsciLexerIDL-members.html  classQsciLexerIDL.html  classQsciLexerJava-members.html  (+126 more)
utils/hexview/: QHexView.cpp  QHexView.h  Util.h  format_address.h
utils/qxt/: qxtconfig.h  qxtglobal.h  qxtlineedit.h
utils/qxt/win/: qxttemporarydir_win.cpp
utils/unix/: Serial.cpp
utils/win32/: Serial.cpp
win32/: make-release.sh  setup.nsi
